--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>AngularHapi</title>
+  <title>Répertoire abonnés</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="bg-light">
   <app-root></app-root>
 </body>
 </html>
